# arxiv-sanity-lite

./: .env  .env.example  .gitignore  README.md  _sysop.sh  arxiv-sanity-lite.wsgi  arxiv_daemon.py  package-lock.json  package.json  pyproject.toml  send_emails.py  serve.py  thumb_daemon.py  thumb_daemon_parallel.py
aslite/: arxiv.py  db.py
cypress/e2e/: paper_detail.cy.js  paper_list.cy.js
static/: VisualizationMatrix.js  VisualizationTest.js  all_word_list.js  debugger.js  paper_detail.js  paper_list.js  paper_list_visual.js  style.css  style_base.css  style_classic.css  style_classic_lite.css  style_layout.css  style_profile.css  style_tufte.css  style_typography.css  word_list.js
templates/: about.html  base.html  cbox.html  index.html  inspect.html  profile.html  search_classic.html  stats.html  visual.html
