[tool.poetry]
name = "arxiv-sanity-lite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.10"
flask = "^2.3.3"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
sqlitedict = "^2.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
