[tool.poetry]
name = "un-arxiv-sanity-lite"
version = "0.1.0"
description = ""
authors = ["Chris B. France <7366+christopherfrance@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
feedparser = "^6.0.10"
flask = "^3.0.0"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
sqlitedict = "^2.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
